HW2/y.output
Terminals unused in grammar

   NOT
   LSB
   RSB
   FOR
   ENDFILE


State 30 conflicts: 1 shift/reduce
State 48 conflicts: 2 shift/reduce
State 49 conflicts: 2 shift/reduce
State 51 conflicts: 1 shift/reduce
State 52 conflicts: 1 shift/reduce
State 53 conflicts: 1 shift/reduce
State 74 conflicts: 1 shift/reduce
State 120 conflicts: 2 reduce/reduce
State 142 conflicts: 1 shift/reduce
State 190 conflicts: 2 shift/reduce


Grammar

    0 $accept: program $end

    1 program: program stats
    2        | stats

    3 stats: stat
    4      | func_declaration

    5 stats_in_func: stats_in_func stat
    6              | stat

    7 stat: declaration_stat
    8     | compound_stat
    9     | expression_stat
   10     | print_func

   11 declaration_stat: type declaration

   12 declaration: ID ASGN initializer SEMICOLON
   13            | ID SEMICOLON
   14            | ID ASGN initializer COMMA declaration

   15 type: INT
   16     | FLOAT
   17     | BOOL
   18     | STRING
   19     | VOID

   20 compound_stat: if_else_stat
   21              | while_stat

   22 while_stat: while_stat_part1 while_stat_part2

   23 while_stat_part1: WHILE LB logic_stats RB

   24 while_stat_part2: stats
   25                 | LCB stats_in_func RCB
   26                 | SEMICOLON

   27 if_else_stat: if_stat else_if_stat else_stat
   28             | if_stat else_stat
   29             | if_stat

   30 if_stat: if_part1 if_part2

   31 if_part1: IF LB logic_stats RB

   32 if_part2: stat
   33         | LCB stats_in_func RCB
   34         | LCB RCB
   35         | SEMICOLON

   36 else_if_stat: else_if_part1 else_if_part2

   37 else_if_part1: ELSE IF LB logic_stats RB

   38 else_if_part2: stat
   39              | LCB stats_in_func RCB
   40              | LCB RCB
   41              | SEMICOLON

   42 else_stat: else_part1 else_part2

   43 else_part1: ELSE

   44 else_part2: stat
   45           | LCB stats_in_func RCB
   46           | SEMICOLON

   47 expression_stat: assign_stat SEMICOLON
   48                | func_call SEMICOLON
   49                | RETURN p3_arithmetic_stat SEMICOLON
   50                | RETURN SEMICOLON

   51 assign_stat: ID ASGN p3_arithmetic_stat
   52            | ID ADDASGN p3_arithmetic_stat
   53            | ID SUBASGN p3_arithmetic_stat
   54            | ID MULASGN p3_arithmetic_stat
   55            | ID DIVASGN p3_arithmetic_stat
   56            | ID MODASGN p3_arithmetic_stat
   57            | p3_arithmetic_stat
   58            | assign_stat COMMA assign_stat

   59 func_call: ID LB func_call_param RB

   60 func_call_param: func_call_param COMMA p3_arithmetic_stat
   61                | p3_arithmetic_stat
   62                | logic_stats

   63 print_func: PRINT LB print_content RB SEMICOLON

   64 initializer: p3_arithmetic_stat

   65 p3_arithmetic_stat: p2_arithmetic_stat ADD p3_arithmetic_stat
   66                   | p2_arithmetic_stat SUB p3_arithmetic_stat
   67                   | p2_arithmetic_stat
   68                   | LB p3_arithmetic_stat RB

   69 p2_arithmetic_stat: p1_arithmetic_stat MUL p2_arithmetic_stat
   70                   | p1_arithmetic_stat DIV p2_arithmetic_stat
   71                   | p1_arithmetic_stat MOD p2_arithmetic_stat
   72                   | p1_arithmetic_stat
   73                   | LB p2_arithmetic_stat RB

   74 p1_arithmetic_stat: INC p1_arithmetic_stat
   75                   | DEC p1_arithmetic_stat
   76                   | p1_arithmetic_stat INC
   77                   | p1_arithmetic_stat DEC
   78                   | value_stat
   79                   | LB p1_arithmetic_stat RB

   80 value_stat: ADD value_stat
   81           | SUB value_stat
   82           | STRING_TEXT
   83           | value
   84           | LB value_stat RB

   85 value: I_CONST
   86      | F_CONST
   87      | TRUE
   88      | FALSE
   89      | ID

   90 func_declaration: fucn_part1 func_part2

   91 fucn_part1: type ID LB

   92 func_part2: RB SEMICOLON
   93           | RB LCB stats_in_func RCB
   94           | RB LCB RCB
   95           | param RB SEMICOLON
   96           | param RB LCB stats_in_func RCB
   97           | param RB LCB RCB

   98 param: type ID
   99      | param COMMA type ID

  100 print_content: ID
  101              | STRING_TEXT

  102 logic_stats: logic_stats logic_op logic_stats
  103            | logic_stat

  104 logic_stat: value_stat MT value_stat
  105           | value_stat LT value_stat
  106           | value_stat MTE value_stat
  107           | value_stat LTE value_stat
  108           | value_stat EQ value_stat
  109           | value_stat NE value_stat
  110           | value_stat

  111 logic_op: AND
  112         | OR


Terminals, with rules where they appear

$end (0) 0
error (256)
ADD (258) 65 80
SUB (259) 66 81
MUL (260) 69
DIV (261) 70
MOD (262) 71
INC (263) 74 76
DEC (264) 75 77
MT (265) 104
LT (266) 105
MTE (267) 106
LTE (268) 107
EQ (269) 108
NE (270) 109
ASGN (271) 12 14 51
ADDASGN (272) 52
SUBASGN (273) 53
MULASGN (274) 54
DIVASGN (275) 55
MODASGN (276) 56
AND (277) 111
OR (278) 112
NOT (279)
LB (280) 23 31 37 59 63 68 73 79 84 91
RB (281) 23 31 37 59 63 68 73 79 84 92 93 94 95 96 97
LCB (282) 25 33 34 39 40 45 93 94 96 97
RCB (283) 25 33 34 39 40 45 93 94 96 97
LSB (284)
RSB (285)
COMMA (286) 14 58 60 99
SEMICOLON (287) 12 13 26 35 41 46 47 48 49 50 63 92 95
PRINT (288) 63
IF (289) 31 37
ELSE (290) 37 43
FOR (291)
WHILE (292) 23
VOID (293) 19
INT (294) 15
FLOAT (295) 16
STRING (296) 18
BOOL (297) 17
TRUE (298) 87
FALSE (299) 88
RETURN (300) 49 50
ENDFILE (301)
I_CONST (302) 85
F_CONST (303) 86
STRING_TEXT (304) 82 101
ID (305) 12 13 14 51 52 53 54 55 56 59 89 91 98 99 100


Nonterminals, with rules where they appear

$accept (51)
    on left: 0
program (52)
    on left: 1 2, on right: 0 1
stats (53)
    on left: 3 4, on right: 1 2 24
stats_in_func (54)
    on left: 5 6, on right: 5 25 33 39 45 93 96
stat (55)
    on left: 7 8 9 10, on right: 3 5 6 32 38 44
declaration_stat (56)
    on left: 11, on right: 7
declaration (57)
    on left: 12 13 14, on right: 11 14
type (58)
    on left: 15 16 17 18 19, on right: 11 91 98 99
compound_stat (59)
    on left: 20 21, on right: 8
while_stat (60)
    on left: 22, on right: 21
while_stat_part1 (61)
    on left: 23, on right: 22
while_stat_part2 (62)
    on left: 24 25 26, on right: 22
if_else_stat (63)
    on left: 27 28 29, on right: 20
if_stat (64)
    on left: 30, on right: 27 28 29
if_part1 (65)
    on left: 31, on right: 30
if_part2 (66)
    on left: 32 33 34 35, on right: 30
else_if_stat (67)
    on left: 36, on right: 27
else_if_part1 (68)
    on left: 37, on right: 36
else_if_part2 (69)
    on left: 38 39 40 41, on right: 36
else_stat (70)
    on left: 42, on right: 27 28
else_part1 (71)
    on left: 43, on right: 42
else_part2 (72)
    on left: 44 45 46, on right: 42
expression_stat (73)
    on left: 47 48 49 50, on right: 9
assign_stat (74)
    on left: 51 52 53 54 55 56 57 58, on right: 47 58
func_call (75)
    on left: 59, on right: 48
func_call_param (76)
    on left: 60 61 62, on right: 59 60
print_func (77)
    on left: 63, on right: 10
initializer (78)
    on left: 64, on right: 12 14
p3_arithmetic_stat (79)
    on left: 65 66 67 68, on right: 49 51 52 53 54 55 56 57 60 61 64
    65 66 68
p2_arithmetic_stat (80)
    on left: 69 70 71 72 73, on right: 65 66 67 69 70 71 73
p1_arithmetic_stat (81)
    on left: 74 75 76 77 78 79, on right: 69 70 71 72 74 75 76 77 79
value_stat (82)
    on left: 80 81 82 83 84, on right: 78 80 81 84 104 105 106 107
    108 109 110
value (83)
    on left: 85 86 87 88 89, on right: 83
func_declaration (84)
    on left: 90, on right: 4
fucn_part1 (85)
    on left: 91, on right: 90
func_part2 (86)
    on left: 92 93 94 95 96 97, on right: 90
param (87)
    on left: 98 99, on right: 95 96 97 99
print_content (88)
    on left: 100 101, on right: 63
logic_stats (89)
    on left: 102 103, on right: 23 31 37 62 102
logic_stat (90)
    on left: 104 105 106 107 108 109 110, on right: 103
logic_op (91)
    on left: 111 112, on right: 102


State 0

    0 $accept: . program $end

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    PRINT        shift, and go to state 6
    IF           shift, and go to state 7
    WHILE        shift, and go to state 8
    VOID         shift, and go to state 9
    INT          shift, and go to state 10
    FLOAT        shift, and go to state 11
    STRING       shift, and go to state 12
    BOOL         shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    RETURN       shift, and go to state 16
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 20

    program             go to state 21
    stats               go to state 22
    stat                go to state 23
    declaration_stat    go to state 24
    type                go to state 25
    compound_stat       go to state 26
    while_stat          go to state 27
    while_stat_part1    go to state 28
    if_else_stat        go to state 29
    if_stat             go to state 30
    if_part1            go to state 31
    expression_stat     go to state 32
    assign_stat         go to state 33
    func_call           go to state 34
    print_func          go to state 35
    p3_arithmetic_stat  go to state 36
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40
    func_declaration    go to state 41
    fucn_part1          go to state 42


State 1

   80 value_stat: ADD . value_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    LB           shift, and go to state 43
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    value_stat  go to state 45
    value       go to state 40


State 2

   81 value_stat: SUB . value_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    LB           shift, and go to state 43
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    value_stat  go to state 46
    value       go to state 40


State 3

   74 p1_arithmetic_stat: INC . p1_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 47
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p1_arithmetic_stat  go to state 48
    value_stat          go to state 39
    value               go to state 40


State 4

   75 p1_arithmetic_stat: DEC . p1_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 47
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p1_arithmetic_stat  go to state 49
    value_stat          go to state 39
    value               go to state 40


State 5

   68 p3_arithmetic_stat: LB . p3_arithmetic_stat RB
   73 p2_arithmetic_stat: LB . p2_arithmetic_stat RB
   79 p1_arithmetic_stat: LB . p1_arithmetic_stat RB
   84 value_stat: LB . value_stat RB

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 50
    p2_arithmetic_stat  go to state 51
    p1_arithmetic_stat  go to state 52
    value_stat          go to state 53
    value               go to state 40


State 6

   63 print_func: PRINT . LB print_content RB SEMICOLON

    LB  shift, and go to state 54


State 7

   31 if_part1: IF . LB logic_stats RB

    LB  shift, and go to state 55


State 8

   23 while_stat_part1: WHILE . LB logic_stats RB

    LB  shift, and go to state 56


State 9

   19 type: VOID .

    $default  reduce using rule 19 (type)


State 10

   15 type: INT .

    $default  reduce using rule 15 (type)


State 11

   16 type: FLOAT .

    $default  reduce using rule 16 (type)


State 12

   18 type: STRING .

    $default  reduce using rule 18 (type)


State 13

   17 type: BOOL .

    $default  reduce using rule 17 (type)


State 14

   87 value: TRUE .

    $default  reduce using rule 87 (value)


State 15

   88 value: FALSE .

    $default  reduce using rule 88 (value)


State 16

   49 expression_stat: RETURN . p3_arithmetic_stat SEMICOLON
   50                | RETURN . SEMICOLON

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    SEMICOLON    shift, and go to state 57
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 58
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 17

   85 value: I_CONST .

    $default  reduce using rule 85 (value)


State 18

   86 value: F_CONST .

    $default  reduce using rule 86 (value)


State 19

   82 value_stat: STRING_TEXT .

    $default  reduce using rule 82 (value_stat)


State 20

   51 assign_stat: ID . ASGN p3_arithmetic_stat
   52            | ID . ADDASGN p3_arithmetic_stat
   53            | ID . SUBASGN p3_arithmetic_stat
   54            | ID . MULASGN p3_arithmetic_stat
   55            | ID . DIVASGN p3_arithmetic_stat
   56            | ID . MODASGN p3_arithmetic_stat
   59 func_call: ID . LB func_call_param RB
   89 value: ID .

    ASGN     shift, and go to state 59
    ADDASGN  shift, and go to state 60
    SUBASGN  shift, and go to state 61
    MULASGN  shift, and go to state 62
    DIVASGN  shift, and go to state 63
    MODASGN  shift, and go to state 64
    LB       shift, and go to state 65

    $default  reduce using rule 89 (value)


State 21

    0 $accept: program . $end
    1 program: program . stats

    $end         shift, and go to state 66
    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    PRINT        shift, and go to state 6
    IF           shift, and go to state 7
    WHILE        shift, and go to state 8
    VOID         shift, and go to state 9
    INT          shift, and go to state 10
    FLOAT        shift, and go to state 11
    STRING       shift, and go to state 12
    BOOL         shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    RETURN       shift, and go to state 16
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 20

    stats               go to state 67
    stat                go to state 23
    declaration_stat    go to state 24
    type                go to state 25
    compound_stat       go to state 26
    while_stat          go to state 27
    while_stat_part1    go to state 28
    if_else_stat        go to state 29
    if_stat             go to state 30
    if_part1            go to state 31
    expression_stat     go to state 32
    assign_stat         go to state 33
    func_call           go to state 34
    print_func          go to state 35
    p3_arithmetic_stat  go to state 36
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40
    func_declaration    go to state 41
    fucn_part1          go to state 42


State 22

    2 program: stats .

    $default  reduce using rule 2 (program)


State 23

    3 stats: stat .

    $default  reduce using rule 3 (stats)


State 24

    7 stat: declaration_stat .

    $default  reduce using rule 7 (stat)


State 25

   11 declaration_stat: type . declaration
   91 fucn_part1: type . ID LB

    ID  shift, and go to state 68

    declaration  go to state 69


State 26

    8 stat: compound_stat .

    $default  reduce using rule 8 (stat)


State 27

   21 compound_stat: while_stat .

    $default  reduce using rule 21 (compound_stat)


State 28

   22 while_stat: while_stat_part1 . while_stat_part2

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    LCB          shift, and go to state 70
    SEMICOLON    shift, and go to state 71
    PRINT        shift, and go to state 6
    IF           shift, and go to state 7
    WHILE        shift, and go to state 8
    VOID         shift, and go to state 9
    INT          shift, and go to state 10
    FLOAT        shift, and go to state 11
    STRING       shift, and go to state 12
    BOOL         shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    RETURN       shift, and go to state 16
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 20

    stats               go to state 72
    stat                go to state 23
    declaration_stat    go to state 24
    type                go to state 25
    compound_stat       go to state 26
    while_stat          go to state 27
    while_stat_part1    go to state 28
    while_stat_part2    go to state 73
    if_else_stat        go to state 29
    if_stat             go to state 30
    if_part1            go to state 31
    expression_stat     go to state 32
    assign_stat         go to state 33
    func_call           go to state 34
    print_func          go to state 35
    p3_arithmetic_stat  go to state 36
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40
    func_declaration    go to state 41
    fucn_part1          go to state 42


State 29

   20 compound_stat: if_else_stat .

    $default  reduce using rule 20 (compound_stat)


State 30

   27 if_else_stat: if_stat . else_if_stat else_stat
   28             | if_stat . else_stat
   29             | if_stat .

    ELSE  shift, and go to state 74

    ELSE      [reduce using rule 29 (if_else_stat)]
    $default  reduce using rule 29 (if_else_stat)

    else_if_stat   go to state 75
    else_if_part1  go to state 76
    else_stat      go to state 77
    else_part1     go to state 78


State 31

   30 if_stat: if_part1 . if_part2

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    LCB          shift, and go to state 79
    SEMICOLON    shift, and go to state 80
    PRINT        shift, and go to state 6
    IF           shift, and go to state 7
    WHILE        shift, and go to state 8
    VOID         shift, and go to state 9
    INT          shift, and go to state 10
    FLOAT        shift, and go to state 11
    STRING       shift, and go to state 12
    BOOL         shift, and go to state 13
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    RETURN       shift, and go to state 16
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 20

    stat                go to state 81
    declaration_stat    go to state 24
    type                go to state 82
    compound_stat       go to state 26
    while_stat          go to state 27
    while_stat_part1    go to state 28
    if_else_stat        go to state 29
    if_stat             go to state 30
    if_part1            go to state 31
    if_part2            go to state 83
    expression_stat     go to state 32
    assign_stat         go to state 33
    func_call           go to state 34
    print_func          go to state 35
    p3_arithmetic_stat  go to state 36
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 32

    9 stat: expression_stat .

    $default  reduce using rule 9 (stat)


State 33

   47 expression_stat: assign_stat . SEMICOLON
   58 assign_stat: assign_stat . COMMA assign_stat

    COMMA      shift, and go to state 84
    SEMICOLON  shift, and go to state 85


State 34

   48 expression_stat: func_call . SEMICOLON

    SEMICOLON  shift, and go to state 86


State 35

   10 stat: print_func .

    $default  reduce using rule 10 (stat)


State 36

   57 assign_stat: p3_arithmetic_stat .

    $default  reduce using rule 57 (assign_stat)


State 37

   65 p3_arithmetic_stat: p2_arithmetic_stat . ADD p3_arithmetic_stat
   66                   | p2_arithmetic_stat . SUB p3_arithmetic_stat
   67                   | p2_arithmetic_stat .

    ADD  shift, and go to state 87
    SUB  shift, and go to state 88

    $default  reduce using rule 67 (p3_arithmetic_stat)


State 38

   69 p2_arithmetic_stat: p1_arithmetic_stat . MUL p2_arithmetic_stat
   70                   | p1_arithmetic_stat . DIV p2_arithmetic_stat
   71                   | p1_arithmetic_stat . MOD p2_arithmetic_stat
   72                   | p1_arithmetic_stat .
   76 p1_arithmetic_stat: p1_arithmetic_stat . INC
   77                   | p1_arithmetic_stat . DEC

    MUL  shift, and go to state 89
    DIV  shift, and go to state 90
    MOD  shift, and go to state 91
    INC  shift, and go to state 92
    DEC  shift, and go to state 93

    $default  reduce using rule 72 (p2_arithmetic_stat)


State 39

   78 p1_arithmetic_stat: value_stat .

    $default  reduce using rule 78 (p1_arithmetic_stat)


State 40

   83 value_stat: value .

    $default  reduce using rule 83 (value_stat)


State 41

    4 stats: func_declaration .

    $default  reduce using rule 4 (stats)


State 42

   90 func_declaration: fucn_part1 . func_part2

    RB      shift, and go to state 94
    VOID    shift, and go to state 9
    INT     shift, and go to state 10
    FLOAT   shift, and go to state 11
    STRING  shift, and go to state 12
    BOOL    shift, and go to state 13

    type        go to state 95
    func_part2  go to state 96
    param       go to state 97


State 43

   84 value_stat: LB . value_stat RB

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    LB           shift, and go to state 43
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    value_stat  go to state 98
    value       go to state 40


State 44

   89 value: ID .

    $default  reduce using rule 89 (value)


State 45

   80 value_stat: ADD value_stat .

    $default  reduce using rule 80 (value_stat)


State 46

   81 value_stat: SUB value_stat .

    $default  reduce using rule 81 (value_stat)


State 47

   79 p1_arithmetic_stat: LB . p1_arithmetic_stat RB
   84 value_stat: LB . value_stat RB

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 47
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p1_arithmetic_stat  go to state 99
    value_stat          go to state 53
    value               go to state 40


State 48

   74 p1_arithmetic_stat: INC p1_arithmetic_stat .
   76                   | p1_arithmetic_stat . INC
   77                   | p1_arithmetic_stat . DEC

    INC  shift, and go to state 92
    DEC  shift, and go to state 93

    INC       [reduce using rule 74 (p1_arithmetic_stat)]
    DEC       [reduce using rule 74 (p1_arithmetic_stat)]
    $default  reduce using rule 74 (p1_arithmetic_stat)


State 49

   75 p1_arithmetic_stat: DEC p1_arithmetic_stat .
   76                   | p1_arithmetic_stat . INC
   77                   | p1_arithmetic_stat . DEC

    INC  shift, and go to state 92
    DEC  shift, and go to state 93

    INC       [reduce using rule 75 (p1_arithmetic_stat)]
    DEC       [reduce using rule 75 (p1_arithmetic_stat)]
    $default  reduce using rule 75 (p1_arithmetic_stat)


State 50

   68 p3_arithmetic_stat: LB p3_arithmetic_stat . RB

    RB  shift, and go to state 100


State 51

   65 p3_arithmetic_stat: p2_arithmetic_stat . ADD p3_arithmetic_stat
   66                   | p2_arithmetic_stat . SUB p3_arithmetic_stat
   67                   | p2_arithmetic_stat .
   73 p2_arithmetic_stat: LB p2_arithmetic_stat . RB

    ADD  shift, and go to state 87
    SUB  shift, and go to state 88
    RB   shift, and go to state 101

    RB  [reduce using rule 67 (p3_arithmetic_stat)]


State 52

   69 p2_arithmetic_stat: p1_arithmetic_stat . MUL p2_arithmetic_stat
   70                   | p1_arithmetic_stat . DIV p2_arithmetic_stat
   71                   | p1_arithmetic_stat . MOD p2_arithmetic_stat
   72                   | p1_arithmetic_stat .
   76 p1_arithmetic_stat: p1_arithmetic_stat . INC
   77                   | p1_arithmetic_stat . DEC
   79                   | LB p1_arithmetic_stat . RB

    MUL  shift, and go to state 89
    DIV  shift, and go to state 90
    MOD  shift, and go to state 91
    INC  shift, and go to state 92
    DEC  shift, and go to state 93
    RB   shift, and go to state 102

    RB        [reduce using rule 72 (p2_arithmetic_stat)]
    $default  reduce using rule 72 (p2_arithmetic_stat)


State 53

   78 p1_arithmetic_stat: value_stat .
   84 value_stat: LB value_stat . RB

    RB  shift, and go to state 103

    RB        [reduce using rule 78 (p1_arithmetic_stat)]
    $default  reduce using rule 78 (p1_arithmetic_stat)


State 54

   63 print_func: PRINT LB . print_content RB SEMICOLON

    STRING_TEXT  shift, and go to state 104
    ID           shift, and go to state 105

    print_content  go to state 106


State 55

   31 if_part1: IF LB . logic_stats RB

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    LB           shift, and go to state 43
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    value_stat   go to state 107
    value        go to state 40
    logic_stats  go to state 108
    logic_stat   go to state 109


State 56

   23 while_stat_part1: WHILE LB . logic_stats RB

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    LB           shift, and go to state 43
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    value_stat   go to state 107
    value        go to state 40
    logic_stats  go to state 110
    logic_stat   go to state 109


State 57

   50 expression_stat: RETURN SEMICOLON .

    $default  reduce using rule 50 (expression_stat)


State 58

   49 expression_stat: RETURN p3_arithmetic_stat . SEMICOLON

    SEMICOLON  shift, and go to state 111


State 59

   51 assign_stat: ID ASGN . p3_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 112
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 60

   52 assign_stat: ID ADDASGN . p3_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 113
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 61

   53 assign_stat: ID SUBASGN . p3_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 114
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 62

   54 assign_stat: ID MULASGN . p3_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 115
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 63

   55 assign_stat: ID DIVASGN . p3_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 116
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 64

   56 assign_stat: ID MODASGN . p3_arithmetic_stat

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    p3_arithmetic_stat  go to state 117
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 39
    value               go to state 40


State 65

   59 func_call: ID LB . func_call_param RB

    ADD          shift, and go to state 1
    SUB          shift, and go to state 2
    INC          shift, and go to state 3
    DEC          shift, and go to state 4
    LB           shift, and go to state 5
    TRUE         shift, and go to state 14
    FALSE        shift, and go to state 15
    I_CONST      shift, and go to state 17
    F_CONST      shift, and go to state 18
    STRING_TEXT  shift, and go to state 19
    ID           shift, and go to state 44

    func_call_param     go to state 118
    p3_arithmetic_stat  go to state 119
    p2_arithmetic_stat  go to state 37
    p1_arithmetic_stat  go to state 38
    value_stat          go to state 120
    value               go to state 40
    logic_stats         go to state 121
    logic_stat          go to state 109


State 66

    0 $accept: program $end .

    $default  accept


State 67

    1 program: program stats .

    $default  reduce using rule 1 (program)


State 68

   12 declaration: ID . ASGN initializer SEMICOLON
   13            | ID . SEMICOLON
   14            | ID . ASGN initializer COMMA declaration
   91 fucn_part1: type ID . LB

    ASGN       shift, and go to state 122
    LB         shift, and go to state 123
    SEMICOLON  shift, and go to state 124


State 69

   11 declaration_stat: type declaration .

    $default  reduce using rule 11 (declaration_stat)


State 70

   25 while_stat_part2: LCB . stats_in_func RCB
